# goit-pythonweb-hw-10

./: .gitignore  pyproject.toml  requirements.txt
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py
src/schemas/: contacts.py  users.py
src/services/: contacts.py  email.py  users.py
src/templates/: verification_email.html
