[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = ""
authors = ["Ruslan Isupov <ruslanisupov1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.10.5"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
cloudinary = "^1.42.1"
slowapi = "^0.1.9"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.2"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"